--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/lights.jpg" target="_blank">
-          <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+        <a href="https://www.w3schools.com/w3images/lights.jpg" target="_blank">
+          <img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -28,8 +28,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/nature.jpg" target="_blank">
-          <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+        <a href="https://www.w3schools.com/w3images/nature.jpg" target="_blank">
+          <img src="https://www.w3schools.com/w3images/nature.jpg" alt="Nature" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -38,8 +38,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/fjords.jpg" target="_blank">
-          <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+        <a href="https://www.w3schools.com/w3images/fjords.jpg" target="_blank">
+          <img src="https://www.w3schools.com/w3images/fjords.jpg" alt="Fjords" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
