--- a/index.html
+++ b/index.html
@@ -11,41 +11,40 @@
 <body>
 
 <div class="container">
-  <h2>Image Gallery</h2>
-  <p>The .thumbnail class can be used to display an image gallery.</p>
-  <p>The .caption class adds proper padding and a dark grey color to text inside thumbnails.</p>
-  <p>Click on the images to enlarge them.</p>
+  <h2>Webcams Flugplätze</h2>
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="https://www.w3schools.com/w3images/lights.jpg" target="_blank">
-          <img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%">
+        <a href="https://flugplatz-voeslau1.panocloud.webcam/current1.jpg" target="_blank">
+          <img src="https://flugplatz-voeslau1.panocloud.webcam/current1.jpg" alt="Lights" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>LOAV Bad Vöslau</p>
           </div>
         </a>
       </div>
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="https://www.w3schools.com/w3images/nature.jpg" target="_blank">
-          <img src="https://www.w3schools.com/w3images/nature.jpg" alt="Nature" style="width:100%">
+        <a href="https://www.wmw.at/webcam/caming.jpg" target="_blank">
+          <img src="https://www.wmw.at/webcam/caming.jpg" alt="Lights" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>LOLW Wels</p>
           </div>
         </a>
       </div>
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="https://www.w3schools.com/w3images/fjords.jpg" target="_blank">
-          <img src="https://www.w3schools.com/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+        <a href="https://lowz.at/webcams/webcam2/image2a.jpg" target="_blank">
+          <img src="https://lowz.at/webcams/webcam2/image2a.jpg" alt="Lights" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>LOWZ Zell am See</p>
           </div>
         </a>
       </div>
     </div>
+    
+   
   </div>
 </div>
 
